Add 3D Spline background to Hero section
Introduced a new SplineScene component using @splinetool/react-spline to render a 3D background in the Hero section. Updated Hero.tsx to use this component and improved layout and styling for better visual impact. Added necessary Spline dependencies to package.json.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.12.27",
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
