Initial project setup with core features and data
Add authentication, admin, and portal pages, along with supporting components and utility files. Integrate LinkedIn data export files, Prisma schema and database, and initial scripts for admin creation. Remove placeholder project and skill components, update UI elements, and configure Tailwind and middleware for the new application structure.

--- a/package.json
+++ b/package.json
@@ -9,22 +9,29 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/runtime": "^1.12.27",
+    "@types/bcryptjs": "^2.4.6",
     "@types/three": "^0.182.0",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
+    "next-auth": "^5.0.0-beta.30",
+    "prisma": "^5.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
